--- a/CrossWordSolver/CrossWordSolver.csproj
+++ b/CrossWordSolver/CrossWordSolver.csproj
@@ -53,6 +53,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadWords.cs" />
+    <Compile Include="ReadWordsInterface.cs" />
+    <Compile Include="Words.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,6 +77,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Words\NL\OpenTaal-210G-basis-gekeurd.txt" />
+    <Content Include="Words\NL\OpenTaal-210G-basis-ongekeurd.txt" />
+    <Content Include="Words\NL\OpenTaal-210G-flexievormen.txt" />
+    <Content Include="Words\NL\OpenTaal-210G-verwarrend.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
