--- a/CrossWordSolver/CrossWordSolver.csproj
+++ b/CrossWordSolver/CrossWordSolver.csproj
@@ -45,17 +45,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="SolverForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SolverForm.Designer.cs">
+      <DependentUpon>SolverForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadWords.cs" />
-    <Compile Include="ReadWordsInterface.cs" />
+    <Compile Include="ReadWordsFromFiles.cs" />
+    <Compile Include="IReadWordsInterface.cs" />
     <Compile Include="Words.cs" />
+    <EmbeddedResource Include="SolverForm.resx">
+      <DependentUpon>SolverForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -64,6 +67,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -80,6 +84,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="Words\NL\NLOpenTaal-210G-verwarrend.txt" />
+    <None Include="Words\NL\NLOpenTaal-210G-flexievormen.txt" />
+    <None Include="Words\NL\NLOpenTaal-210G-basis-ongekeurd.txt" />
+    <None Include="Words\NL\NLOpenTaal-210G-basis-gekeurd.txt" />
     <Content Include="Words\NL\OpenTaal-210G-basis-gekeurd.txt" />
     <Content Include="Words\NL\OpenTaal-210G-basis-ongekeurd.txt" />
     <Content Include="Words\NL\OpenTaal-210G-flexievormen.txt" />
